syntax = "proto3";

package edu.neu.cs6510.sp25.t1.grpc;

service WorkerService {
  rpc RunPipeline(PipelineRequest) returns (PipelineResponse);
}

message PipelineRequest {
  string repo_url = 1;
  string branch = 2;
  string commit = 3;
}

message PipelineResponse {
  string status = 1;
  string logs = 2;
}